--- a/Places.html
+++ b/Places.html
@@ -6,6 +6,11 @@
     <title>Places</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="./index.html">Home</a>&nbsp;&nbsp;<a href="./user-prefs.html">User Preference</a>
+        </nav>
+    </header>
 
 
 
