--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="./user-prefs.html">User Preference</a>&nbsp;&nbsp;<a href="./Places.html">Map</a>
+            <a href="./user-prefs.html">User Preference</a>&nbsp;&nbsp;<a href="./Places.html">Places</a>
         </nav>
     </header>
    
