Add save and load from local storage

--- a/Places.html
+++ b/Places.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Places</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html">Home</a>&nbsp;&nbsp;<a href="./user-prefs.html">User Preference</a>
-        </nav>
+      <nav><a href="./index.html">Home</a>&nbsp;&nbsp;<a href="./user-prefs.html">User Preference</a></nav>
     </header>
 
-
-
-
-    
     <script src="./placeService.js"></script>
     <script src="./userService.js"></script>
     <script src="./utilService.js"></script>
-</body>
+  </body>
 </html>
