--- a/user-prefs.html
+++ b/user-prefs.html
@@ -25,6 +25,7 @@
 
         <button>set</button>
     </form>
+    <div class="aaa"></div>
         <script src="./placeService.js"></script>
         <script src="./userService.js"></script>
         <script src="./utilService.js"></script>
