--- a/user-prefs.html
+++ b/user-prefs.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Prefernce</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html">Home</a>&nbsp;&nbsp;<a href="./Places.html">Places</a>
-        </nav>
+      <nav><a href="./index.html">Home</a>&nbsp;&nbsp;<a href="./Places.html">Places</a></nav>
     </header>
     <form id="frmRegister" onsubmit="onSubmit(event)">
-        <div>
-            <label for="email">E-mail</label>
-            <input type="email" name="email" autocomplete="off">
-        </div>
+      <div>
+        <label for="email">E-mail</label>
+        <input type="email" name="email" autocomplete="off" />
+      </div>
 
-        <div>
-            <label for="txtColor">Set Text Color</label>
-            <input type="color" name="txtColor">
-        </div>
-       
+      <div>
+        <label for="txtColor">Set Text Color</label>
+        <input type="color" name="txtColor" />
+      </div>
 
-        <button>set</button>
+      <div>
+        <label for="bgColor">Set Background Color</label>
+        <input type="color" name="bgColor" />
+      </div>
+
+      <div>
+        <label for="age">Age</label>
+        <input type="range" name="age" min="18" max="120" value="30" />
+      </div>
+
+      <div>
+        <label for="birthDate">Birth Date</label>
+        <input type="date" name="birthDate"/>
+      </div>
+
+      <div>
+        <label for="birthTime">Birth Time</label>
+        <input type="time" name="birthTime"/>
+      </div>
+
+      <button>set</button>
     </form>
     <div class="aaa"></div>
-        <script src="./placeService.js"></script>
-        <script src="./userService.js"></script>
-        <script src="./utilService.js"></script>
-</body>
-
+    <script src="./placeService.js"></script>
+    <script src="./userService.js"></script>
+    <script src="./utilService.js"></script>
+  </body>
 </html>
