render birth date and birth hour

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
         </nav>
     </header>
     <h1>Find your way back to your best places</h1>
-  
+  <p class="birthDate"></p>
+  <p class="birthTime"></p>
     </form>
+
     <script src="./service/util.service.js"></script>
+    <script src="./service/user-settings.service.js"></script>
     <script src="./controller/user-settings.controller.js"></script>
     <script src="./controller/Index.controller.js"></script>
   
