--- a/user-prefs.html
+++ b/user-prefs.html
@@ -23,7 +23,7 @@
 
       <div>
         <label for="bgColor">Set Background Color</label>
-        <input type="color" id="bgColor" name="bgColor" value="#000000 />
+        <input type="color" id="bgColor" name="bgColor" value="#000000" />
       </div>
 
       <div>
